--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,21 @@ repository = "https://github.com/jothan/cordoba.git"
 license = "GPL-3.0+"
 readme = "README.md"
 keywords = ["cdb", "python"]
-categories = ["database", "data-structures", "config", "filesystem"]
+categories = ["database", "data-structures", "config", "filesystem", "no-std"]
 
 [profile.release]
 panic = "abort"
 
 [dependencies]
-byteorder = "1"
 clap = { version="2.31", optional=true }
 memmap = { version="0.7.0", optional=true }
+pyo3 = { version="0.6.0-alpha.2", optional=true }
 
 [features]
-default = ["build-binary"]
+default = ["build-binary", "std"]
 build-binary = ["clap", "memmap"]
+std = []
+python = ["pyo3"]
 
 [[bin]]
 name = "cdb"
