--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cordoba"
 description = "Zero-copy and mmapable CDB access library with a Python interface"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
 edition = "2018"
 
@@ -18,7 +18,7 @@ panic = "abort"
 [dependencies]
 clap = { version="2.31", optional=true }
 memmap = { version="0.7.0", optional=true }
-pyo3 = { version="0.6.0-alpha", optional=true }
+pyo3 = { version="=0.6.0-alpha.2", optional=true }
 
 [features]
 default = ["build-binary", "std"]
