--- a/cordoba-py/Cargo.toml
+++ b/cordoba-py/Cargo.toml
@@ -4,6 +4,11 @@ description = "Cordoba Python interface"
 version = "0.3.1"
 authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
 edition = "2018"
+homepage = "https://github.com/jothan/cordoba"
+repository = "https://github.com/jothan/cordoba.git"
+license = "GPL-3.0+"
+keywords = ["cdb", "python"]
+categories = ["database", "data-structures", "config", "filesystem", "no-std"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
