--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ panic = "abort"
 [dependencies]
 clap = { version="2.31", optional=true }
 memmap = { version="0.7.0", optional=true }
-pyo3 = { version="=0.9.0-alpha.1", optional=true }
+pyo3 = { version="0.11", optional=true }
 
 [features]
 default = ["build-binary", "std"]
