--- a/cordoba-py/Cargo.toml
+++ b/cordoba-py/Cargo.toml
@@ -18,5 +18,5 @@ memmap = { version="0.7.0" }
 cordoba = { path = "..", features=["python"] }
 
 [dependencies.pyo3]
-version = "=0.9.0-alpha.1"
+version = "0.11"
 features = ["extension-module"]
