--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,16 @@ panic = "abort"
 [dependencies]
 clap = { version="2.31", optional=true }
 memmap = { version="0.7.0", optional=true }
-pyo3 = { version="0.11", optional=true }
+pyo3 = { version="0.11", features=["extension-module"], optional=true }
 
 [features]
 default = ["build-binary", "std"]
 build-binary = ["clap", "memmap"]
 std = []
-python = ["pyo3"]
+python = ["pyo3", "memmap"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [[bin]]
 name = "cdb"
@@ -33,6 +36,3 @@ required-features = ["build-binary"]
 [[bin]]
 name = "cdbwrite"
 required-features = ["build-binary"]
-
-[workspace]
-members = ["cordoba-py"]
